@@ -2,6 +2,7 @@ Revision history for perl distribution Convos
 
 0.99_10 Not Released
  - Fix handling of "/whois nick" when "nick" is offline
+ - Fix tracking join/part/quit/nick change events #276
 
 0.99_09 2016-09-11T22:53:31+0200
  - Fix sorting participants list
